# unison-io-braille

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: INTEGRATION_OVERVIEW.md  MILESTONES.md
src/unison_io_braille/: __init__.py  adapter.py  auth.py  discovery.py  driver_registry.py  events.py  generic_hid.py  hid_io.py  input_router.py  interfaces.py  manager.py  middleware.py  server.py  settings.py  simulated_driver.py  translator.py  translator_loader.py  transport.py
src/unison_io_braille/drivers/: focus.py  handytech.py  hims.py
src/unison_io_braille/tables/: ueb_grade1.yaml  ueb_grade1_8dot.yaml  ueb_grade2.yaml
tests/: test_auth.py  test_focus_driver.py  test_server.py  test_simulated_driver.py  test_translator.py  test_translator_loader.py  test_vendor_drivers.py
